unpackaged/main/default/objects/CRC_Request_Action_Settings__c/CRC_Request_Action_Settings__c.object-meta.xml
<CustomObject>
    <label>CRC Request Action Settings</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>CRC Request Action Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRC Request Action Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>