unpackaged/main/default/objects/CRC_Request_Action_Settings__c/fields/Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Description__c</fullName>
    <label>Action Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>