unpackaged/main/default/objects/CRC_Request_Action_Settings__c/fields/Applies_to_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_Request_Type__c</fullName>
    <label>Applies to Request Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRC_Request_Type</valueSetName>
    </valueSet>
</CustomField>