unpackaged/main/default/objects/CRC_Request_Action_Settings__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CRC_Request_Action_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>