unpackaged/main/default/objects/CRC_Request_Action_Settings__c/fields/Due_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_in_Days__c</fullName>
    <label>Due in Days</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>