unpackaged/main/default/objects/CRC_Request_Action_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Description__c</columns>
    <columns>Applies_to_Request_Type__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_in_Days__c</columns>
    <columns>Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>